--- a/INSTALL
+++ b/INSTALL
@@ -3,9 +3,9 @@
 
 This file contains instructions for installing JavaMOP.
 
-1. Prerequisites
+===1. Prerequisites===
 
-1.1 Install JDK 6 if needed.
+=1.1 JDK 6=
 
 We expect java 1.6.x or newer (JDK 6). If you already have an installed JDK
 check the version with javac -version. If you already have a correct JDK
@@ -17,16 +17,18 @@ To install JDK 6, go to the following URL:
 
 And download "Java SE Development Kit (JDK)"
 
-When you download it, specify your platform. And install it by double clicking
-it or executing it on the command line. Installing JDK 6 may take awhile.
+To download, specify your platform. Install JDK 6 by double clicking the
+downloaded installer or executing it on the command line. Installing JDK 6 may
+take awhile.
 
-Also set the PATH or Path variable to add the JDK 6 directory if it is not
-already there. Choose Start, Settings, Control Panel, and double-click System.
-On Microsoft Windows NT, select the Environment tab; on Microsoft Windows XP and
-2000, select The Advanced tab and then Environment Variables. Look for "Path" in
-the User Variables and System Variables. If you're not sure where to add the
-path, add it to the left end of the "Path" in the User Variables. A typical
-value for PATH is:
+Set the PATH or Path variable to add the JDK 6 directory if it is not already
+set. Choose Start, Settings, Control Panel, and double-click System.  On
+Microsoft Windows NT, select the Environment tab; on Microsoft Windows XP and
+2000, select The Advanced tab and then Environment Variables. Look for "Path"
+in the User Variables and System Variables. If you're not sure where to add the
+path, add it to the left end of the "Path" in the User Variables. For POSIX
+based operating systems, set the PATH variable in your .login script or in the
+rc file for whatever shell you use. A typical value to add to the Path is:
 
 In Windows,
   C:\Program Files\Java\jdk1.6.0_14\bin
@@ -41,10 +43,11 @@ For more information, refer to Section 5 from the following URL:
 --- To test: run 'javac' from the command line, this should display usage
 information for javac.
 
-1.2 Install AspectJ if needed.
+=1.2 AspectJ=
 
-If it is already installed make sure to set your environment variables correctly
-as outlined below.
+As JavaMOP generates AspectJ aspects, AspectJ must be installed to make full
+use of JavaMOP.  If AspectJ is already installed, make sure to set your
+environment variables correctly as outlined below.
 
 Download AspectJ from the following URL:
   http://www.eclipse.org/aspectj/downloads.php
@@ -54,7 +57,7 @@ release is later than 1.6.x, then download the most recent 1.6.x version of
 AspectJ.
 
 Simply execute the jar file from the download site by either double clicking it
-(on OSes that support that) or running the following command:
+(on OSes that support double clicking jar files) or running the following command:
 
   java -jar aspect1.6.x.jar
 
@@ -67,13 +70,16 @@ Section 4.1) will not work.
 --- To test: run 'ajc' from the command line, this should display usage
 information for ajc. (ajc is the AspectJ compiler)
 
-2. Build JavaMOP from Source
+===2. Build JavaMOP from Source===
 
 Building JavaMOP is necessary only if you need to make modifications to JavaMOP.
 It is recommended for end users to use the JavaMOP binary installer from the
 project website and skip this section.
 
-2.1 Install Ant if needed.
+=2.1 Ant
+
+JavaMOP is built using Apache Ant.  If you do not have Ant use the following
+instructions to install it.
 
 Download ant from the following URL:
   http://ant.apache.org/bindownload.cgi
@@ -87,17 +93,18 @@ created where xxxx is the version number.
 The scripts to run ant are in apache-ant-xxxx/bin. If you wish to execute them
 anywhere add this directory to your PATH environment variable.
 
-2.2 Install Scala if needed.
+=2.2 Scala
 
-If it is already installed make sure to set your environment variables correctly
-as outlined below.
+The PTLTL plugin for JavaMOP is built using Scala.  The current build process
+requires building the PTLTL plugin.  If Ant is already installed make sure to
+set your environment variables correctly as outlined below.
 
 Download Scala from the following URL:
   http://www.scala-lang.org/downloads
 
 Download the latest IzPack Installer and install it by double clicking it.
 
-Set the SCALA_HOME environment variable if it is not already there. A typical
+Set the SCALA_HOME environment variable if it is not already set. A typical
 value for SCALA_HOME is:
 
 In Windows,
@@ -106,19 +113,19 @@ In Windows,
 In Linux and Mac,
   /usr/local/share/scala
 
-Also add 'bin' directory under SCALA_HOME to the PATH environment variable.
+Add the 'bin' directory under SCALA_HOME to the PATH environment variable.
 
 --- To test: run 'scalac' from the command line, this should display usage
 information.
 
-2.3 Download the JavaMOP source
+=2.3 Download the JavaMOP source
 
 As the tool is still under active development, it is recommended that you 
 download JavaMOP directly from the SVN repository, as follows:
 
   svn checkout http://javamop.googlecode.com/svn/trunk/ javamop
 
-2.4 Build JavaMOP
+=2.4 Build JavaMOP
 
 From the top level directory of JavaMOP (i.e. the directory this file is in) run
 
@@ -130,17 +137,18 @@ If you placed ant in your PATH is it possible to simply type
 
 This will build JavaMOP, the logic repository, and the test suite.
 
-3. JavaMOP Setup
+===3. JavaMOP Setup===
 
-3.1 Setting Environment Variables
+=3.1 Setting Environment Variables
 
 Set the PATH or Path variable to add the JavaMOP bin directory if it is not
 already there. Choose Start, Settings, Control Panel, and double-click System.
-On Microsoft Windows NT, select the Environment tab; on Microsoft Windows XP and
-2000, select The Advanced tab and then Environment Variables. Look for "Path" in
-the User Variables and System Variables. If you're not sure where to add the
-path, add it to the left end of the "Path" in the User Variables. A typical
-value for PATH is:
+On Microsoft Windows NT, select the Environment tab; on Microsoft Windows XP
+and 2000, select The Advanced tab and then Environment Variables. Look for
+"Path" in the User Variables and System Variables. If you're not sure where to
+add the path, add it to the left end of the "Path" in the User Variables.  For
+POSIX based operating systems, set the PATH variable in your .login script or in
+the rc file for whatever shell you use.  A typical value for PATH is:
 
 In Windows
   C:\javamop2.2\bin
@@ -153,19 +161,16 @@ Add this to the left end of the "Path" followed by ";" (":" in Linux and Mac).
 --- To test: run 'javamop' from the command line, this should display usage
 information for javamop.
 
-4. Test your installation
+===4. Testing JavaMOP===
 
-4.1 TestSuite
+=4.1 TestSuite
 
 JavaMOP provides a TestSuite. The TestSuite has two main purposes: First, it
 tests JavaMOP itself. JavaMOP is a very actively evolving project. New features
-are introduced regularly. We need to make sure that new feature do not damage
+are introduced regularly. We need to make sure that new features do not damage
 preexisting functionality. Second, the TestSuite can be used as a tutorial for
-how to use JavaMOP to monitor programs. Furthermore, it provides an easy way to
-use JavaMOP. A user may simply provide a specification and a program to be
-monitored by the specification, with a file specifying the expected output. The
-name of the file is used to match the output to the monitored program. See the
-directories in the TestSuite for examples.
+how to use JavaMOP to monitor programs. See the directories in the TestSuite
+for examples.
 
 To execute the TestSuite with the remote Logic Repository, type
 
@@ -183,14 +188,14 @@ The number of threads is specified after -j. The default is two threads
 
 If you want to add a test case, make a sub directory under javamop2.2/examples/
 and add a specification and programs in the new directory, with proper output
-files for the expected output of the given programs. About the detailed
-directory structure of test cases, refer Section 4.2.
+files for the expected output of the given programs. For details about the
+TestSuite directory structure, read the next section.
 
-4.2 Executing a Test Case Manually
+=4.2 Executing a Test Case Manually
 
 A test case directory consists of specifications and testing program
 directories. All specifications will be applied to each testing program. The
-test suite will automatically generate another directory for each testing
+TestSuite will automatically generate another directory for each testing
 program directory with suffix _MOP, for a monitored testing program. For
 example, javamop2.2/examples/ERE/HasNext has a specification HasNext.mop and
 three testing program directories HasNext_1, HasNext_2, and HasNext_3. TestSuite
@@ -231,6 +236,7 @@ In Linux or Mac,
 
 5. Contact Information
 
-If you experience any problems installing JavaMOP, please feel free to contact us by sending emails to mop@cs.uiuc.edu.
-
+If you experience any problems installing JavaMOP, please feel free to contact
+us by sending emails to mop@cs.uiuc.edu.  Bug reports can be submitted
+at javamop.googlecode.com.
 
