--- a/INSTALL
+++ b/INSTALL
@@ -1,242 +1,107 @@
-
-                          JavaMOP 2.3.1 INSTALL
-
 This file contains instructions for installing JavaMOP.
 
 ===1. Prerequisites===
 
-=1.1 JDK 6=
+=1.1 JDK =
 
-We expect java 1.6.x or newer (JDK 6). If you already have an installed JDK
-check the version with javac -version. If you already have a correct JDK
-installed make sure your environment variables are properly defined as outlined
-below.
+We expect java 1.7. If you already have an installed JDK check the
+version with javac -version. If you already have the correct JDK
+installed make sure your environment variables are properly defined as
+outlined below.
 
-To install JDK 6, go to the following URL:
-  http://java.sun.com/javase/downloads/index.jsp
+To download JDK 7, go to the following URL:
 
-And download "Java SE Development Kit (JDK)"
+http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html
 
-To download, specify your platform. Install JDK 6 by double clicking the
-downloaded installer or executing it on the command line. Installing JDK 6 may
-take awhile.
+Download the right JDK file for your platform (you may be required to
+accept the Oracle Licence Agreement).
 
-Set the PATH or Path variable to add the JDK 6 directory if it is not already
-set. Choose Start, Settings, Control Panel, and double-click System.  On
-Microsoft Windows NT, select the Environment tab; on Microsoft Windows XP and
-2000, select The Advanced tab and then Environment Variables. Look for "Path"
-in the User Variables and System Variables. If you're not sure where to add the
-path, add it to the left end of the "Path" in the User Variables. For POSIX
-based operating systems, set the PATH variable in your .login script or in the
-rc file for whatever shell you use. A typical value to add to the Path is:
+To install JDK 7, follow the instructions found here:
 
-In Windows,
-  C:\Program Files\Java\jdk1.6.0_14\bin
+http://docs.oracle.com/javase/7/docs/webnotes/install/
 
-In Linux and Mac,
-It depends on your distribution.
+In UNIX-based Operating systems like Linux, set the PATH enviroment
+variable to include the path to your newly installed JDK 7. Depending
+on your operating system, the command may differ. For example, here is
+a typical exampls for Linux:
 
-Add this to the left end of the "Path" followed by ";" (":" in Linux and Mac).
-For more information, refer to Section 5 from the following URL:
-  http://java.sun.com/j2se/1.4.2/install-windows.html
+$ export PATH=$PATH:/usr/bin/java
 
---- To test: run 'javac' from the command line, this should display usage
+In Windows, add the JDK 7 directory to your Path environment variable.
+
+To test: run 'javac' from the command line, this should display usage
 information for javac.
 
-=1.2 AspectJ=
 
-As JavaMOP generates AspectJ aspects, AspectJ must be installed to make full
-use of JavaMOP.  If AspectJ is already installed, make sure to set your
-environment variables correctly as outlined below.
+= Maven 3 =
 
-Download AspectJ from the following URL:
-  http://www.eclipse.org/aspectj/downloads.php
+JavaMOP requires Maven 3.0 or higher to build. To download and install
+Maven 3.0, please follow the instructions on this page:
 
-Download the latest stable release if its version is 1.6.x. If the latest stable
-release is later than 1.6.x, then download the most recent 1.6.x version of
-AspectJ.
+http://maven.apache.org/download.cgi
 
-Simply execute the jar file from the download site by either double clicking it
-(on OSes that support double clicking jar files) or running the following command:
+= Git 1.8 or higher = 
 
-  java -jar aspect1.6.x.jar
+Git is required to download the sources for JavaMOP. To download and
+install Git, please follow the instructions found on the following
+page:
 
-At the end of installation, the installer recommends adding some paths to
-CLASSPATH and to PATH. JavaMOP requires this step, because it assumes that ajc
-(the AspectJ compiler) is usable anywhere. In particular if
-<path to aspectj>/lib/aspectjrt.jar is not in CLASSPATH, the testsuite (see
-Section 4.1) will not work.
+http://git-scm.com/book/en/Getting-Started-Installing-Git
 
---- To test: run 'ajc' from the command line, this should display usage
-information for ajc. (ajc is the AspectJ compiler)
 
 ===2. Build JavaMOP from Source===
 
-Building JavaMOP is necessary only if you need to make modifications to JavaMOP.
-It is recommended for end users to use the JavaMOP binary installer from the
-project website and skip this section.
+Building JavaMOP is necessary only if you need to make modifications
+to JavaMOP.  We are working on building a binary installer for
+JavaMOP. When that becomes available, it is recommended that end users
+use the JavaMOP binary installer and skip this section.
 
-=2.1 Ant
+=2.1 Download the JavaMOP source code
 
-JavaMOP is built using Apache Ant.  If you do not have Ant use the following
-instructions to install it.
+As the tool is under active development, it is recommended that you
+download JavaMOP directly from the Github repository:
 
-Download ant from the following URL:
-  http://ant.apache.org/bindownload.cgi
+git clone https://github.com/runtimeverification/javamop.git
 
-Download one of the archives in a format you are able to open. At last check
-they have archives for .zip, .tar.gz, and .tar.bz2.
+Alternatively, you may also download the latest version of the code as
+a "zip" or "tar.gz" archive from here:
 
-Extract the contents of the archive. A directory named apache-ant-xxxx will be
-created where xxxx is the version number.
+https://github.com/runtimeverification/javamop/releases
 
-The scripts to run ant are in apache-ant-xxxx/bin. If you wish to execute them
-anywhere add this directory to your PATH environment variable.
+=2.2 Build JavaMOP
 
-=2.2 Scala
+From the top level directory of JavaMOP (i.e. the directory this file
+is in) run the following commands:
 
-The PTLTL plugin for JavaMOP is built using Scala.  The current build process
-requires building the PTLTL plugin.  If Ant is already installed make sure to
-set your environment variables correctly as outlined below.
+mvn package 
 
-Download Scala from the following URL:
-  http://www.scala-lang.org/downloads
+This will download many dependencies the first time you run it. Note
+that we are working on adding unit tests to JavaMOP at this time.
 
-Download the latest IzPack Installer and install it by double clicking it.
+If you would like to build JavaMOP, run the intergration tests and put
+the javamop jar to be one of the jars that Maven knows about
+(typically stored in a directory called .m2, which may be found in the
+user's home directory), run the following command:
 
-Set the SCALA_HOME environment variable if it is not already set. A typical
-value for SCALA_HOME is:
-
-In Windows,
-  C:\Program Files\Scala
-
-In Linux and Mac,
-  /usr/local/share/scala
-
-Add the 'bin' directory under SCALA_HOME to the PATH environment variable.
-
---- To test: run 'scalac' from the command line, this should display usage
-information.
-
-=2.3 Download the JavaMOP source
-
-As the tool is still under active development, it is recommended that you 
-download JavaMOP directly from the SVN repository, as follows:
-
-  svn checkout http://javamop.googlecode.com/svn/trunk/ javamop
-
-=2.4 Build JavaMOP
-
-From the top level directory of JavaMOP (i.e. the directory this file is in) run
-
-  <path to ant>/bin/ant
-
-If you placed ant in your PATH is it possible to simply type
-
-  ant
-
-This will build JavaMOP, the logic repository, and the test suite.
+mvn install
 
 ===3. JavaMOP Setup===
 
 =3.1 Setting Environment Variables
 
-Set the PATH or Path variable to add the JavaMOP bin directory if it is not
-already there. Choose Start, Settings, Control Panel, and double-click System.
-On Microsoft Windows NT, select the Environment tab; on Microsoft Windows XP
-and 2000, select The Advanced tab and then Environment Variables. Look for
-"Path" in the User Variables and System Variables. If you're not sure where to
-add the path, add it to the left end of the "Path" in the User Variables.  For
-POSIX based operating systems, set the PATH variable in your .login script or in
-the rc file for whatever shell you use.  A typical value for PATH is:
+Set the PATH (in UNIX-based systems) or Path (In Windows) environment
+to include the following JavaMOP binary directory:
 
-In Windows
-  C:\javamop2.3\bin
+path-to-JavaMOP/target/release/javamop/bin (in UNIX-based systems)
 
-In Linux and Mac,
-  ~/javamop2.3/bin
+or
 
-Add this to the left end of the "Path" followed by ";" (":" in Linux and Mac). 
+path-to-JavaMOP/target/release/javamop/bin (in Windows)
 
 --- To test: run 'javamop' from the command line, this should display usage
 information for javamop.
 
-===4. Testing JavaMOP===
+4. Contact Information
 
-=4.1 TestSuite
-
-JavaMOP provides a TestSuite. The TestSuite has two main purposes: First, it
-tests JavaMOP itself. JavaMOP is a very actively evolving project. New features
-are introduced regularly. We need to make sure that new features do not damage
-preexisting functionality. Second, the TestSuite can be used as a tutorial for
-how to use JavaMOP to monitor programs. See the directories in the TestSuite
-for examples.
-
-To execute the TestSuite with the remote Logic Repository, type
-
-'javamoptestsuite -remote' in Linux and Mac or 'javamoptestsuite.bat -remote' in Windows
-
-To execute the test suite with the local Logic Repository, type
-
-'javamoptestsuite' or 'javamoptestsuite -local' in Linux and Mac
-or 'javamoptestsuite.bat' or 'javamoptestsuite.bat -local' in Windows
-
-If you want the verbose mode pass the -v flag to the script of your choice.
-
-The -j command allows multiple threads to be used to speed up the test suite.
-The number of threads is specified after -j. The default is two threads
-
-If you want to add a test case, make a sub directory under javamop2.3/examples/
-and add a specification and programs in the new directory, with proper output
-files for the expected output of the given programs. For details about the
-TestSuite directory structure, read the next section.
-
-=4.2 Executing a Test Case Manually
-
-A test case directory consists of specifications and testing program
-directories. All specifications will be applied to each testing program. The
-TestSuite will automatically generate another directory for each testing
-program directory with suffix _MOP, for a monitored testing program. For
-example, javamop2.3/examples/ERE/HasNext has a specification HasNext.mop and
-three testing program directories HasNext_1, HasNext_2, and HasNext_3. TestSuite
-generates HasNextMonitorAspect.aj in the same directory where HasNext.mop is. It
-also generates three directories of monitored testing programs, HasNext_1_MOP,
-HasNext_2_MOP, and HasNext_3_MOP.
-
-Enter the test case directory you want. For example, 
-  javamop2.3/examples/ERE/HasNext
-
-To compile specifications, type
-
-  javamop *.mop
-
-To compile all java files in a testing program directory, type
-
-In Windows,
-  javac -d <testing program dir> <testing program dir>\*.java
-
-In Linux or Mac,
-  javac -d <testing program dir> <testing program dir>/*.java
-
-To duplicate a program directory for monitoring, type
-
-  cp -rp <testing program dir> <testing program dir>_MOP
-
-To compile aspectj code with a testing program, type
-
-  ajc -1.5 -d <testing program dir>_MOP -inpath <testing program dir> *.aj
-
-To execute a monitored testing program, type
-
-In Windows,
-  java -cp "%CLASSPATH%";<testing program dir>_MOP <testing program class>
-
-In Linux or Mac,
-  java -cp "$CLASSPATH":<testing program dir>_MOP <testing program class>
-
-5. Contact Information
-
-If you experience any problems installing JavaMOP, please feel free to contact
-us by sending emails to mop@cs.uiuc.edu.  Bug reports can be submitted
-at javamop.googlecode.com.
-
+If you experience any problems installing JavaMOP, please open a new
+issue on Github: https://github.com/runtimeverification/javamop/issues
